<resources>
    <string name="app_name">CoviBeer</string>
    <string name="access">Informations</string>
    <string name="password">Password</string>
    <string name="identifiant">Username</string>
    <string name="connexion">Connection</string>
    <string name="inscription">register</string>
    <string name="world">World:</string>
    <string name="gu_ris">Recovered:</string>
    <string name="morts">Dead:</string>
    <string name="malades">Sick:</string>
    <string name="home">Home</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">submit</string>
    <string name="you_are_logged_in">You are logged in !</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navHome">Home</string>
    <string name="navMap">Map</string>
    <string name="navHealth">Health</string>
    <string name="item_default_name">Error_Name</string>
    <string name="txthealth">Health</string>
    <string name="medical_report">Medical report</string>
    <string name="first_name">First name</string>
    <string name="validate">validate</string>
    <string name="weight">Weight</string>
    <string name="height">height</string>
    <string name="age">age</string>
    <string name="name">Name</string>
    <string name="symptoms_check">Symptoms check</string>
    <string name="nez">runny nose</string>
    <string name="gorge">Sore throats/cough</string>
    <string name="fievre">Fever</string>
    <string name="respire">Breathing difficulties</string>
    <string name="national_insurance_number">National Insurance Number</string>
    <string name="attach_my_medical_report">Attach my medical Report</string>
    <string name="ask_for_a_rendez_vous">Ask for a rendez vous</string>
</resources>
