<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/symptoms_check"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/valider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchNose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/nez"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valider" />

    <Switch
        android:id="@+id/switchGorge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/gorge"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchNose" />

    <Switch
        android:id="@+id/switchToux"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/fievre"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchGorge" />

    <Switch
        android:id="@+id/switchRespire"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/respire"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchToux" />


</androidx.constraintlayout.widget.ConstraintLayout>